2000-01-18  Ulrich Drepper  <drepper@cygnus.com>

	* wcsmbs/mbrtowc.c: Create temporary state object if no output is
	written.
	* wcsmbs/mbsrtowcs.c: Likewise.
	* wcsmbs/wcrtomb.c: Likewise.
	* wcsmbs/wcsrtombs.c: Likewise.

	* wcsmbs/wcrtomb.c: Compute result correctly for successful call
	with s == NULL.

	* wcsmbs/mbsrtowcs.c: Compute return value correctly after change
	in gconv function.

	* wcsmbs/mbrtowc.c: Don't set errno if byte sequence is only
	incomplete but correct.

	* locale/programs/charmap.c: NUL-terminate names of generated
	entries for ellipsis.

2000-01-18  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/lxstat.c: New file, handles 32bit UIDs.
	* sysdeps/unix/sysv/linux/i386/fxstat.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/xstat.c (__xstat): Move
	_STAT_VER_KERNEL handling up; don't save errno.
	* sysdeps/unix/sysv/linux/arm/fxstat.c: New file.
	* sysdeps/unix/sysv/linux/arm/lxstat.c: Likewise.
	* sysdeps/unix/sysv/linux/arm/xstat.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/fxstat.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/lxstat.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/xstat.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/fxstat.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/lxstat.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/xstat.c: Likewise.

2000-01-18  Ulrich Drepper  <drepper@cygnus.com>

	* iconv/loop.c (COUNT_CONVERTED): Remove macro, comment, and all uses.
	Remove done variable and all uses.
	* iconv/skeleton.c: Update comment for *written modification.
	* iconv/gconv_int.h (__gconv): Update comment.
	Reported by Bruno Haible.

2000-01-18  Bruno Haible  <haible@ilog.fr>

	* posix/fnmatch.c (ISWCTYPE): New macro.
	(__wcschrnul): New function.
	(BTOWC): New macro. Define it instead of __btowc.
	(is_char_class) [!_LIBC]: Fix 'mstate_t' typo. Fix 2nd arg to
	wcsrtombs. Call wctype, not __wctype.
	* posix/fnmatch_loop.c (FCT): Use ISWCTYPE instead of __iswctype, and
	BTOWC instead of __btowc.
