@@ -1,3 +1,14 @@
+2000-01-19  Ulrich Drepper  <drepper@cygnus.com>
+
+	* locale/weight.h (findidx): Little optimization.  Correctly return
+	offset in indirect table.
+	* locale/programs/ld-collate.c (struct element_t): Add mblast
+	and compute it where necessary.
+	(insert_weights): Correctly handle missing weights in ellipsis
+	expression.
+	(handle_ellipsis): Correctly enqueue new element.
+	(collate_output): Insert indirect references in the right order.
+
 2000-01-18  Ulrich Drepper  <drepper@cygnus.com>
 
 	* wcsmbs/mbrtowc.c: Create temporary state object if no output is
